Monthly Calendar is now a Hebrew Calendar

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hebcal/core": "^2.11.0"
+    "@hebcal/core": "^2.11.0",
+    "lodash": "^4.17.20"
   }
 }
