--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@hebcal/core": "^2.11.0",
+    "googleapis": "^66.0.0",
     "lodash": "^4.17.20"
   }
 }
