--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@hebcal/core": "^2.11.0",
+    "fs-extra": "^9.1.0",
     "googleapis": "^66.0.0",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.21"
   }
 }
