--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,12 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
+# output files
+5782/
+5781/
+5783/
+cal/
+
 # Runtime data
 pids
 *.pid
